--- a/client/src/components/Styles/Footer.module.css
+++ b/client/src/components/Styles/Footer.module.css
@@ -67,10 +67,22 @@
         gap: 0;
     }
     .container div {
-        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
     .container div div{ 
+        display: flex;
         width: 80%;
-        align-items: center;
+        align-items: center!important;
+    }
+    .container div div a{ 
+        width: 50%;
+        align-content: flex-start!important;
+        justify-content: flex-start;
+        margin: 0;
+        padding: 0;
     }
 }
