--- a/client/src/components/Styles/Panel.module.css
+++ b/client/src/components/Styles/Panel.module.css
@@ -39,12 +39,12 @@
 #imgPrincipal{
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 600px;
+    width: 70%;
+    height: 800px;
 }
 #imgPrincipal img{
     width: 100%;
-    max-height: 100%;
+    height: 100%;
 }
 #imgCarrousel{
     width: 90%;
