--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -134,14 +134,13 @@
 }
 #divA{
     width: 70%;
-    min-height: 300px;
-    margin: 30px 0 !important;
+    min-height: 30%;
     text-justify: inter-word;
     text-align: justify;
 }
 #divA h1{
     font-family: "Montserrat";
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 1000;
     text-align: left;
 }
@@ -348,6 +347,52 @@
 #btn2:hover{
     transform: scale(1.03)
 }
+@media screen and (max-width: 1400px) {
+    #div1 {
+        width: 90%;
+    }
+    #divInfo {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #divInfoCont{
+        height: 90%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        animation: aparece 1.5s ease-in-out;
+    }
+    #divInfoCont h2 {
+        border-bottom: 1px solid black;
+        font-weight: 1000;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont div{
+        height: 10%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont label{
+        width: 60%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont span{
+        font-weight: bold;
+        border-bottom: 1px solid black;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+}
 @media screen and (max-width: 1200px) {
     #div1 {
         width: 90%;
@@ -397,6 +442,9 @@
 @media screen and (max-width: 1024px) {
     #div1 {
         width: 90%;
+    }
+    #divA h1{
+        font-size: 32px;
     }
     #divInfo {
         width: 100%;
@@ -502,6 +550,9 @@
     #divInfoCont{
         width: 90%;
     }
+    #divInfoCont label{
+        width: 90%;
+    }
     #btn1{
         font-size: 12px;
         width: 30%;
@@ -532,6 +583,13 @@
         width: 80%;
         height: 100%;
     }
+    #divInfo{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
     #divInfoCont{
         height: 90%;
         width: 100%;
@@ -543,17 +601,19 @@
     #divInfoCont div{
         min-height: 15%;
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        /* animation: aparece 1.5s ease-in-out; */
-    }
-    #divInfoCont label{
-        width: 100%;
         display: flex;
-        flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 15px;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont label{
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
         /* animation: aparece 1.5s ease-in-out; */
     }
     #btn1{
