--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -119,7 +119,7 @@
     gap: 20px;
     animation: aparece 1.5s ease-in-out;
 }
-#divIzq{
+.divIzq{
     margin-top: 5%;
     width: 50%;
     height: 100%;
@@ -128,7 +128,7 @@
     align-items: flex-end;
     justify-content: flex-start;
 }
-#divIzq div {
+.divIzq div {
     overflow: hidden;
     margin: 10px 0;
 }
@@ -137,6 +137,22 @@
     min-height: 30%;
     text-justify: inter-word;
     text-align: justify;
+    overflow-y: scroll;
+}
+#divA p{
+    width: 90%;
+}
+#divA::-webkit-scrollbar{
+    width: 5px;
+}
+#divA::-webkit-scrollbar-track{
+    background: #BBBFCA;
+}
+#divA::-webkit-scrollbar-thumb{
+    background: black;
+}
+#divA::-webkit-scrollbar-thumb:hover{
+    background: #555;
 }
 #divA h1{
     font-family: "Montserrat";
@@ -513,7 +529,7 @@
         min-width: 350px;
         height: 100%;
     }
-    #divIzq{
+    .divIzq{
         width: 100%;
         align-items: center;
         height: 50%;
