--- a/client/src/components/Styles/SearchBar.module.css
+++ b/client/src/components/Styles/SearchBar.module.css
@@ -11,6 +11,9 @@
     border-radius: 3px 0px 0px 3px;
     padding: 0px 5px;
 }
+#searchBarContainer input:focus{
+    outline: none;
+}
 /* #searchBarContainer input:{
     border: none;
 } */
